finish command pattern